providers/docker/tests/snapshots/container-faces__00-list-omnifs-itest-docker-fixture.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 0: list /containers/by-name/omnifs-itest-docker-fixture
inspect.json  file  unknown  stable
state  file  unknown  stable
summary.txt  file  unknown  stable
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
