providers/docker/tests/snapshots/container-faces__01-read-inspect-json.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 1: read /containers/by-name/omnifs-itest-docker-fixture/inspect.json
attrs: dynamic - 4031
bytes (4031):
{"AppArmorProfile":"","Args":["600"],"Config":{"AttachStderr":false,"AttachStdin":false,"AttachStdout":false,"Cmd":["sleep","600"],"Domainname":"","Entrypoint":null,"Env":["PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"],"Hostname":"bca3b9668811","Image":"alpine:3.20","Labels":{"com.docker.compose.project":"omnifs-itest-fixture","com.docker.compose.service":"web"},"OpenStdin":false,"StdinOnce":false,"Tty":false,"User":"","Volumes":null,"WorkingDir":"/"},"Created":"2026-07-08T13:07:21.472328007Z","Driver":"overlayfs","ExecIDs":null,"GraphDriver":{"Data":null,"Name":"overlayfs"},"HostConfig":{"AutoRemove":false,"Binds":null,"BlkioDeviceReadBps":[],"BlkioDeviceReadIOps":[],"BlkioDeviceWriteBps":[],"BlkioDeviceWriteIOps":[],"BlkioWeight":0,"BlkioWeightDevice":[],"CapAdd":null,"CapDrop":null,"Cgroup":"","CgroupParent":"","CgroupnsMode":"private","ConsoleSize":[0,0],"ContainerIDFile":"","CpuCount":0,"CpuPercent":0,"CpuPeriod":0,"CpuQuota":0,"CpuRealtimePeriod":0,"CpuRealtimeRuntime":0,"CpuShares":0,"CpusetCpus":"","CpusetMems":"","DeviceCgroupRules":null,"DeviceRequests":null,"Devices":[],"Dns":null,"DnsOptions":[],"DnsSearch":[],"ExtraHosts":null,"GroupAdd":null,"IOMaximumBandwidth":0,"IOMaximumIOps":0,"IpcMode":"private","Isolation":"","Links":null,"LogConfig":{"Config":{"max-file":"5","max-size":"20m"},"Type":"json-file"},"MaskedPaths":["/proc/acpi","/proc/asound","/proc/interrupts","/proc/kcore","/proc/keys","/proc/latency_stats","/proc/sched_debug","/proc/scsi","/proc/timer_list","/proc/timer_stats","/sys/devices/virtual/powercap","/sys/firmware"],"Memory":0,"MemoryReservation":0,"MemorySwap":0,"MemorySwappiness":null,"NanoCpus":0,"NetworkMode":"bridge","OomKillDisable":null,"OomScoreAdj":0,"PidMode":"","PidsLimit":null,"PortBindings":{},"Privileged":false,"PublishAllPorts":false,"ReadonlyPaths":["/proc/bus","/proc/fs","/proc/irq","/proc/sys","/proc/sysrq-trigger"],"ReadonlyRootfs":false,"RestartPolicy":{"MaximumRetryCount":0,"Name":"no"},"Runtime":"runc","SecurityOpt":null,"ShmSize":8409579520,"UTSMode":"","Ulimits":[],"UsernsMode":"","VolumeDriver":"","VolumesFrom":null},"HostnamePath":"/var/lib/docker/containers/bca3b9668811e8e2094986557c513ce62f8284ea5e38b6bdc6879eceb2e5fd30/hostname","HostsPath":"/var/lib/docker/containers/bca3b9668811e8e2094986557c513ce62f8284ea5e38b6bdc6879eceb2e5fd30/hosts","Id":"bca3b9668811e8e2094986557c513ce62f8284ea5e38b6bdc6879eceb2e5fd30","Image":"sha256:d9e853e87e55526f6b2917df91a2115c36dd7c696a35be12163d44e6e2a4b6bc","LogPath":"/var/lib/docker/containers/bca3b9668811e8e2094986557c513ce62f8284ea5e38b6bdc6879eceb2e5fd30/bca3b9668811e8e2094986557c513ce62f8284ea5e38b6bdc6879eceb2e5fd30-json.log","MountLabel":"","Mounts":[],"Name":"/omnifs-itest-docker-fixture","NetworkSettings":{"EndpointID":"51e57b1fea318ea2ad70be5e1a3153e9a53799316b6e4f104c46583b0c845c9e","Gateway":"192.168.215.1","GlobalIPv6Address":"","GlobalIPv6PrefixLen":0,"IPAddress":"192.168.215.2","IPPrefixLen":24,"IPv6Gateway":"","MacAddress":"8e:5e:a7:e7:29:c4","Networks":{"bridge":{"Aliases":null,"DNSNames":null,"DriverOpts":null,"EndpointID":"51e57b1fea318ea2ad70be5e1a3153e9a53799316b6e4f104c46583b0c845c9e","Gateway":"192.168.215.1","GlobalIPv6Address":"","GlobalIPv6PrefixLen":0,"GwPriority":0,"IPAMConfig":null,"IPAddress":"192.168.215.2","IPPrefixLen":24,"IPv6Gateway":"","Links":null,"MacAddress":"8e:5e:a7:e7:29:c4","NetworkID":"fa86f7af729df8082096e78b36c3b4cc88c05ef7949298f4f2b0949713a50ad0"}},"Ports":{},"SandboxID":"717a58a0deb7c90026c198e7cc2a4c15d77052529b6c4921ed8ffe43a31b99d4","SandboxKey":"/var/run/docker/netns/717a58a0deb7"},"Path":"sleep","Platform":"linux","ProcessLabel":"","ResolvConfPath":"/var/lib/docker/containers/bca3b9668811e8e2094986557c513ce62f8284ea5e38b6bdc6879eceb2e5fd30/resolv.conf","RestartCount":0,"State":{"Dead":false,"Error":"","ExitCode":0,"FinishedAt":"0001-01-01T00:00:00Z","OOMKilled":false,"Paused":false,"Pid":2407217,"Restarting":false,"Running":true,"StartedAt":"2026-07-08T13:07:21.78051595Z","Status":"running"}}

canonical:
  (none)
fs:
  /state  file dynamic - 8 inline
  /summary.txt  file dynamic - 101 inline
invalidations:
  (none)
