providers/docker/tests/snapshots/container-faces__02-read-state.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 2: read /containers/by-id/bca3b9668811/state
attrs: dynamic - 8
bytes (8):
running

canonical:
  (none)
fs:
  /summary.txt  file dynamic - 101 inline
invalidations:
  (none)
